--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <li class="title-list link">
             <img
               class="title-team"
-              src="./images/team1.jpg"s
+              src="./images/team1.jpg"
               alt="Product Designer"
               width="264"
             />
