--- a/portfolio.html
+++ b/portfolio.html
@@ -5,21 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web studio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;0,800;1,700&family=Roboto:ital,wght@0,700;1,700&display=swap"
-      rel="stylesheet" />
-        <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+       rel="stylesheet" />
+   <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
-  <body class="body">
+  <body>
     <!-- content -->
-    <header class="header">
+    <header class="header link">
       <nav class="header-navigation list">
         <a class="header-logoweb link" href="./index.html"
-          >Web <span class="header-logoweb-link link">Studio</span></a
+          >Web<span class="header-logoweb-link link">Studio</span></a
         >
         <ul class="header-menu list">
           <li class="header-menu-item link">
@@ -173,7 +172,7 @@
     <!--WEBSTUDIO-->
     <footer class="footer-navigation">
       <a class="footer-list link" href="./index.html"
-        >Web <span class="navigation-link ">Studio</span></a
+        >Web<span class="navigation-link ">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
